force-apps/deploy/main/default/objects/OrderItem__c/OrderItem__c.object-meta.xml
<CustomObject>
    <label>OrderItem</label>
    <nameField>
        <displayFormat>ORDER_ITEM-{0000}</displayFormat>
        <label>OrderItem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>