force-apps/deploy/main/default/objects/OrderItem__c/fields/DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercent__c</fullName>
    <label>DiscountPercent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>