force-apps/deploy/main/default/objects/OrderItem__c/fields/ETODC_Key__c.field-meta.xml
<CustomField>
    <fullName>ETODC_Key__c</fullName>
    <externalId>true</externalId>
    <label>ETODC Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>