force-apps/deploy/main/default/objects/OrderItem__c/fields/LineTotal__c.field-meta.xml
<CustomField>
    <fullName>LineTotal__c</fullName>
    <formula>UnitPriceAmount__c * OrderedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>