force-apps/deploy/main/default/objects/OrderItem__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SalesOrder</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>dcOrderItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>