force-apps/deploy/main/default/objects/OrderItem__c/fields/UnitPriceAmount__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceAmount__c</fullName>
    <label>UnitPriceAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>