force-apps/deploy/main/default/objects/OrderItem__c/listViews/ETOrchestrateDC.listView-meta.xml
<ListView>
    <fullName>ETOrchestrateDC</fullName>
    <columns>NAME</columns>
    <columns>SalesOrder__c</columns>
    <columns>Product__c</columns>
    <columns>OrderedQuantity__c</columns>
    <columns>ListPriceAmount__c</columns>
    <columns>DiscountPercent__c</columns>
    <columns>DiscountAmount__c</columns>
    <columns>UnitPriceAmount__c</columns>
    <columns>LineTotal__c</columns>
    <columns>ETODC_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>ETOrchestrateDC</label>
</ListView>